--- a/404.html
+++ b/404.html
@@ -178,7 +178,7 @@
         
         <div class="logo">
             <span class="logo-icon"></span>
-            Uxidone Corp
+            Uxidone Corporation
         </div>
         
         <div class="error-code">404</div>
