--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="project-content">
                     <h3 class="project-title">Brackaszihmani</h3>
                     <p>A custom Minecraft server featuring survival, factions, and unique gameplay mechanics.</p>
-                    <a href="https://brackaszihmani.github.io" class="btn" style="display: inline-block; margin-top: 0.5rem;">Visit Project</a>
+                    <a href="https://aka-xe.github.io/mcserver" class="btn" style="display: inline-block; margin-top: 0.5rem;">Visit Project</a>
                 </div>
             </div>
 
