--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uxidone</title>
-    <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A//www.w3.org/2000/svg'%20viewBox%3D'0%200%20100%20100'%3E%3Ctext%20y%3D'90'%20font-size%3D'90'%3E🎈%3C/text%3E%3C/svg%3E">
+    <link rel="icon" href="/favicon.ico">
     <style>
         :root {
             --primary: #2a4365;  /* Dark blue (corporate) */
