--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="uxidone.github.io/favicon.ico">
+    <link rel="icon" href="uxidone.work.gd/favicon.ico">
     <title>Uxidone</title>    
     <style>
         :root {
