--- a/events/private/Marija_liga_dz_diena/index.html
+++ b/events/private/Marija_liga_dz_diena/index.html
@@ -156,7 +156,7 @@
         
         <div class="signature">
             Ar visu mīlestību,<br>
-            Tavs bērns ❤️
+            Oskars ❤️
         </div>
     </div>
     
