--- a/index.html
+++ b/index.html
@@ -409,12 +409,12 @@
             <div class="footer-cta">
                 <h2 class="reveal">Let's create the<br>unconventional.</h2>
                 <div class="mag-btn-wrap reveal">
-                    <a href="mailto:hello@uxidone.com" class="btn">Launch Project <i data-lucide="rocket"></i></a>
+                    <a href="mailto:uxidone@gmail.com" class="btn">Launch Project <i data-lucide="rocket"></i></a>
                 </div>
             </div>
 
             <div class="footer-bottom">
-                <div>&copy; 2026 UXIDONE ARCHIVE</div>
+                <div>&copy; 2026 UXIDONE/ Uxidone Systems</div>
                 <div style="display: flex; gap: 2rem;">
                     <a href="#" style="color: inherit; text-decoration: none;">GitHub</a>
                     <a href="#" style="color: inherit; text-decoration: none;">LinkedIn</a>
