--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             </div>
 
             <div class="footer-bottom">
-                <div>&copy; 2026 UXIDONE/ Uxidone Systems</div>
+                <div>&copy; 2026 UXIDONE/ UXIDONE SYSTEMS</div>
                 <div style="display: flex; gap: 2rem;">
                     <a href="#" style="color: inherit; text-decoration: none;">GitHub</a>
                     <a href="#" style="color: inherit; text-decoration: none;">LinkedIn</a>
