--- a/againstjonathanleeriches/index.html
+++ b/againstjonathanleeriches/index.html
@@ -256,7 +256,7 @@
         </div>
 
         <nav class="back-nav">
-            <a href="index.html" class="back-link">
+            <a href="/" class="back-link">
                 ← Return to Core System
             </a>
             <span style="font-size: 0.7rem; color: var(--accent-muted); letter-spacing: 0.1em;">AUTHENTICATED ACCESS ONLY</span>
