Update footer text for branding consistency

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="container">
             <div class="footer-content">
                 <div>
-                    <p style="letter-spacing: 0.1em; font-weight: 600; color: var(--accent);">UXIDONE // ARCHITECTING THE FUTURE</p>
+                    <p style="letter-spacing: 0.1em; font-weight: 600; color: var(--accent);">UXIDONE ARCHITECTURAL SYSTEMS // ARCHITECTING THE FUTURE</p>
                     <p style="margin-top: 0.5rem;">EST. 2026. ALL RIGHTS RESERVED.</p>
                 </div>
                 <div class="footer-links">
